# SiteGKA

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pyre_configuration  AGENTS.md  Dockerfile  README.md  cash_registers_seed.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  test_infrascope.db
.claude/: settings.json
.github/workflows/: ci.yml  service-cd-reusable.yml  service-ci-reusable.yml
alembic/: env.py
alembic/versions/: 5727d5c5d61c_initial_user_model.py  a1b2c3d4e5f6_add_printer_type.py  a3b4c5d6e7f8_add_ml_foundation_tables.py  ab12cd34ef56_add_store_number_to_cash_register.py  b2c3d4e5f6a7_add_mac_address.py  b4c5d6e7f8a9_add_store_number_to_cash_register.py  b7c8d9e0f1a2_add_switch_vendor_snmp_fields.py  c3d4e5f6a7b8_add_mac_status.py  c5d6e7f8a9b0_add_netsupport_target_to_cash_register.py  c8d9e0f1a2b3_add_last_seen_at_to_user.py  cfddc39e63ff_add_printer_model.py  d4e5f6a7b8c9_add_connection_type_and_host_pc.py  d6e7f8a9b0c1_add_computer_and_app_settings_tables.py  d9e0f1a2b3c4_add_event_log_table.py  e1f2a3b4c5d6_add_cash_register_table.py  e5f6a7b8c9d0_add_media_player_model.py  e7f8a9b0c1d2_add_computer_polling_fields.py  f2a3b4c5d6e7_add_printer_toner_names.py  f6a7b8c9d0e1_add_network_switch_model.py  fba776f80d0f_verify_models.py
app/: __init__.py  crud.py  initial_data.py  main.py  models.py  schemas.py
app/api/: __init__.py  deps.py  main.py  websockets.py
app/core/: config.py  db.py  readiness.py  redis.py  security.py
app/discovery_service/: main.py
app/domains/: __init__.py
app/ml/: __init__.py  pipeline.py
app/ml_service/: __init__.py  main.py
app/network_control_service/: main.py
app/observability/: __init__.py  metrics.py  tracing.py
app/polling_service/: main.py
app/services/: app_settings.py  boarding_pass.py  cache.py  cisco_ssh.py  (+18 more)
docs/: asyncapi.yml  domains.md  production-readiness-checklist.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: check_sber_sync.py  deploy.sh  fill_sber_by_store.py  import_cash_registers_seed.py  import_computers_from_printers.py  prestart.sh  report_sber_coverage.py  smoke-contract.sh  smoke_boarding_pass.py  smoke_post_deploy.py
services/: catalog.yaml
tests/: conftest.py
(+255 files in other folders)
